k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ocelot-deployment
  namespace: prod-eng
  labels:
    app: admin-ocelot
spec:
  replicas: 3
  selector:
    matchLabels:
      app: admin-ocelot
  template:
    metadata:
      labels:
        app: admin-ocelot
    spec:
      volumes:
      - name: privkey-volume
        secret: 
          secretName: ocelot
      - name: docker-sock-volume
        hostPath:
          # location on host
          path: /var/run/docker.sock
          # this field is optional
          type: File
      # - name: crt-volume
      #   secret:
      #     secretName: metaverse-secret
      containers:
      - name: admin-ocelot
        image: jessishank/ocelot-admin:frazzle.1
        imagePullPolicy: Always
        volumeMounts:
          - name: privkey-volume
            mountPath: "/etc/letsencrypt/live/ocelot.hq.l11.com"
          - mountPath: /var/run/docker.sock
            name: docker-sock-volume
        ports:
        - containerPort: 10000
        command: ["/admin"]
        args: 
          # - sleep
          # - "3600"
          # - -private-key=/etc/certs/tls.key
          # - -cert-loc=/etc/certs/tls.crt
          - -consul-host=$(CONSUL_HOST)
          - -log-level=debug
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hookhandler-ocelot-deployment
  namespace: prod-eng
  labels:
    app: hookhandler-ocelot
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hookhandler-ocelot
  template:
    metadata:
      labels:
        app: hookhandler-ocelot
    spec:
      volumes:
      - name: docker-sock-volume
        hostPath:
          path: /var/run/docker.sock
          type: File
      containers:
      - name:  hookhandler-ocelot
        image: jessishank/ocelot-hookhandler:frazzle
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /var/run/docker.sock
            name: docker-sock-volume
        ports:
        - containerPort: 8088
        command: ["/hookhandler"]

        args: 
          - -consul-host=$(CONSUL_HOST)
          - -log-level=debug
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poller-ocelot-deployment
  namespace: prod-eng
  labels:
    app: poller-ocelot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poller-ocelot
  template:
    metadata:
      labels:
        app: poller-ocelot
    spec:
      volumes:
      - name: docker-sock-volume
        hostPath:
          path: /var/run/docker.sock
          type: File
      containers:
      - name:  poller-ocelot
        image: jessishank/ocelot-poller:frazzle.2
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /var/run/docker.sock
            name: docker-sock-volume
        args:
          - -consul-host=$(CONSUL_HOST)
          - -log-level=debug
