k8s/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ocelot-admin-svc-np
  namespace: prod-eng
  # annotations:
    # prometheus.io/scrape: "true"
spec:
  type: NodePort
  ports:
    - port: 10000
      nodePort: 31000
      name: http1

  selector:
    app: admin-ocelot
---
apiVersion: v1
kind: Service
metadata:
  name: ocelot-admin-svc
  namespace: prod-eng
  # annotations:
  #   prometheus.io/scrape: "true"
spec:
  ports:
    - port: 10000
      targetPort: 10000
      protocol: TCP
      name: http
  selector:
    app: admin-ocelot
---
apiVersion: v1
kind: Service
metadata:
  name: ocelot-hookhandler-svc
  namespace: prod-eng
  # annotations:
  #   prometheus.io/scrape: "true"
spec:
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
      name: http
  selector:
    app: hookhandler-ocelot
